// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Item /> should render correctly 1`] = `
<PublicDraggable
  draggableId="1"
  index={0}
  key="1"
>
  <Component />
</PublicDraggable>
`;

exports[`<Item /> should render correctly when empty 1`] = `
<PublicDraggable
  draggableId="1"
  index={0}
  isDragDisabled={true}
  key="1"
>
  <Component />
</PublicDraggable>
`;

exports[`<Item /> should render correctly with other props 1`] = `
<PublicDraggable
  draggableId="2"
  index={2}
  key="2"
>
  <Component />
</PublicDraggable>
`;
